// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PartialAbstract does not render if abstract is not passed 1`] = `<DocumentFragment />`;

exports[`PartialAbstract should not append ellipsis when abstract length is less than the limit 1`] = `
<DocumentFragment>
  <div
    class="__PartialAbstract__"
  >
    <span
      class="__Latex__"
    >
      A short abstract
    </span>
  </div>
</DocumentFragment>
`;

exports[`PartialAbstract should render partial abstract 1`] = `
<DocumentFragment>
  <div
    class="__PartialAbstract__"
  >
    <span
      class="__Latex__"
    >
      The phenomenon of CP violation is crucial to understand the asymmetry between matter and antimatter that exists in the Universe. Dramatic experimental progress has been made, in particular in measurements of the behaviour of particles containing the ...
    </span>
  </div>
</DocumentFragment>
`;
